[package]
name = "oyster-tcp-proxy"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "vsock-to-ip"
path = "src/vsock_to_ip.rs"

[[bin]]
name = "ip-to-vsock"
path = "src/ip_to_vsock.rs"

[[bin]]
name = "ip-to-vsock-transparent"
path = "src/ip_to_vsock_transparent.rs"

[[bin]]
name = "vsock-to-ip-transparent"
path = "src/vsock_to_ip_transparent.rs"

[[bin]]
name = "port-to-vsock-transparent"
path = "src/port_to_vsock_transparent.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
tokio-vsock = "0.3.2"
futures = "0.3"
clap = { version = "3.2.19", features = ["derive"] }
anyhow = "1.0.72"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[profile.release]
strip = true
lto = true
panic = "abort"
